--- a/pages/Mac.html
+++ b/pages/Mac.html
@@ -31,10 +31,10 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
-          <a href="../pages/account.html">
+          <a href="">
             <img src="../assets/images/NguyenDucVu_241230896/header_image/login-icon.png" alt="login icon"
               id="login-icon-img" />
           </a>
@@ -135,7 +135,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Pro M5/0051653_macbook-pro-14-inch-m5-2025-10-core-gpu-10-core-cpu-16gb-ram-512gb-ssd_240.png"
@@ -161,7 +161,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036014_macbook-air-m4-13-inch-8-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -186,7 +186,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036014_macbook-air-m4-13-inch-8-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -211,7 +211,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036014_macbook-air-m4-13-inch-8-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -235,7 +235,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036194_macbook-air-m4-15-inch-10-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -260,7 +260,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036194_macbook-air-m4-15-inch-10-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -285,7 +285,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M4/0036194_macbook-air-m4-15-inch-10-core-gpu-16gb-ram-256gb-ssd_240.jpeg"
@@ -309,7 +309,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Pro M5/0051653_macbook-pro-14-inch-m5-2025-10-core-gpu-10-core-cpu-16gb-ram-512gb-ssd_240.png"
@@ -335,7 +335,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Pro M5/0051653_macbook-pro-14-inch-m5-2025-10-core-gpu-10-core-cpu-16gb-ram-512gb-ssd_240.png"
@@ -361,7 +361,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M2/0051654_macbook-air-m2-13-inch-10-core-gpu-16gb-ram-256gb-ssd_240.png"
@@ -386,7 +386,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/iMac/0031540_imac-m4-2024-24-inch-8-core-gpu16gb256gb_240.jpeg"
@@ -411,7 +411,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac mini/0031669_mac-mini-m4-16gb-ram_240.jpeg"
@@ -434,7 +434,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac mini/0031669_mac-mini-m4-16gb-ram_240.jpeg"
@@ -457,7 +457,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac mini/0031669_mac-mini-m4-16gb-ram_240.jpeg"
@@ -480,7 +480,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/iMac/0000809_imac-m1-2021-24-inch-8-core-gpu8gb512gb_240.jpg"
@@ -505,7 +505,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M2/0051654_macbook-air-m2-13-inch-10-core-gpu-16gb-ram-256gb-ssd_240.png"
@@ -530,7 +530,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac mini/0011564_mac-mini-m2-10-core-gpu-8gb-ram-256gb-ssd_240.jpeg"
@@ -555,7 +555,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac mini/0011564_mac-mini-m2-10-core-gpu-8gb-ram-256gb-ssd_240.jpeg"
@@ -580,7 +580,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac mini/0011564_mac-mini-m2-10-core-gpu-8gb-ram-256gb-ssd_240.jpeg"
@@ -603,7 +603,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Studio/0000728_studio-display_240.png"
@@ -624,7 +624,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Studio/0010612_mac-studio-m1-max_240.webp"
@@ -645,7 +645,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Studio/0000806_mac-studio-m1-ultra_240.png"
@@ -666,7 +666,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Studio/0010612_mac-studio-m1-max_240.webp"
@@ -686,7 +686,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Studio/0010612_mac-studio-m1-max_240.webp"
@@ -706,7 +706,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Pro/0018106_mac-pro-m2-ultra_240.jpeg"
@@ -728,7 +728,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/MacBook Air M2/0051654_macbook-air-m2-13-inch-10-core-gpu-16gb-ram-256gb-ssd_240.png"
@@ -753,7 +753,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/iMac/0000809_imac-m1-2021-24-inch-8-core-gpu8gb512gb_240.jpg"
@@ -778,7 +778,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/iMac/0031540_imac-m4-2024-24-inch-8-core-gpu16gb256gb_240.jpeg"
@@ -803,7 +803,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/iMac/0031757_imac-m4-2024-24-inch-10-core-gpu16gb256gb_240.jpeg"
@@ -825,7 +825,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Studio/0010612_mac-studio-m1-max_240.webp"
@@ -845,7 +845,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/Mac Studio/0010612_mac-studio-m1-max_240.webp"
@@ -867,7 +867,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/MacBook/iMac/0034200_imac-m4-2024-24-inch-10-core-gpu16gb256gb-nano-texture-glass_240.jpeg"
