--- a/pages/camera.html
+++ b/pages/camera.html
@@ -31,7 +31,7 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
           <a href="">
@@ -142,7 +142,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/insta360/X5EB.jpeg"
                   alt="Insta360 X5 Essentials Bundle" />
@@ -163,7 +163,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/insta360/X5SB.jpeg"
                   alt="Insta360 X5 Standard Bundle" />
@@ -184,7 +184,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/insta360/Flow2PROSB.jpeg"
                   alt="Insta360 Flow 2 Pro Standard Bundle" />
@@ -206,7 +206,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="tag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/dji/DJIOsmoPocket3.jpeg"
                   alt="Camera cầm tay DJI Osmo Pocket 3 | Creator Combo" />
@@ -230,7 +230,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="tag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/dji/DJIOsmoNano.jpeg"
                   alt="Camera hành trình DJI Osmo Nano" />
@@ -249,7 +249,7 @@
         <div class="product-box dji">
           <div class="product-inner">
             <div class="product-tag"></div>
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/dji/DJIMic3.jpeg"
                   alt="Microphone DJI Mic 3 (2TX + 1 RX + Hộp sạc)" />
@@ -271,7 +271,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/fujifilm/FujiFilmX-S20.jpeg"
                   alt="Máy ảnh Fujifilm X-S20" />
@@ -292,7 +292,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/fujifilm/FujiFilmX100VI.jpeg"
                   alt="Máy ảnh Fujifilm X100VI" />
@@ -310,7 +310,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/sony/SonyRX100VII.jpeg"
                   alt="Máy ảnh Sony nhỏ gọn RX100 VII, khả năng AF vô song" />
@@ -331,7 +331,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/sony/SonyFDR-AX43A.jpeg"
                   alt="Máy quay Sony Handycam FDR-AX43A" />
@@ -350,7 +350,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/sony/FLAGSHIP.jpeg"
                   alt="Máy ảnh flagship α1 II dành cho chuyên gia" />
@@ -371,7 +371,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/sony/Alpha7CII.jpeg"
                   alt="Máy ảnh Sony full-frame nhỏ gọn Alpha7C II" />
@@ -393,7 +393,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/insta360/ACEPRO2SB.png"
                   alt="Insta360 Ace Pro 2 Standard Bundle" />
@@ -414,7 +414,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/insta360/ALTRACKER.jpeg"
                   alt="Insta360 Flow 2 AI Tracker Bundle" />
@@ -434,7 +434,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/dji/ComboDJIOsmoActionAdvanced.jpeg"
@@ -459,7 +459,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="tag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/dji/ComboDJIOsmoActionStandard.jpeg"
@@ -482,7 +482,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/dji/ChongRungOE200.jpeg"
                   alt="Thiết bị cầm tay chống rung cho điện thoại DJI Osmo Mobile 6_OE200" />
@@ -506,7 +506,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/fujifilm/FujiFilmX-T50.jpeg"
                   alt="Máy ảnh Fujifilm X-T50" />
@@ -528,7 +528,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/fujifilm/FujiFilmX-M5.jpeg"
                   alt="Máy ảnh Fujifilm X-M5" />
@@ -549,7 +549,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/sony/Alpha7CR.jpeg"
                   alt="Máy ảnh Sony full-frame nhỏ gọn Alpha7CR 61,0 MP" />
@@ -570,7 +570,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/sony/Alpha9III.jpeg"
                   alt="Máy ảnh Sony Alpha 9 III với màn trập bao trùm" />
@@ -590,7 +590,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/dji/ChongRungOK200.jpeg"
                   alt="Thiết bị cầm tay chống rung cho điện thoại DJI Osmo Mobile SE_OK200" />
@@ -612,7 +612,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/insta360/ACEPRO2SB.png"
                   alt="Insta360 Ace Pro 2 Dual Battery Standard Bundle" />
@@ -635,7 +635,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/insta360/GO3SSC.jpeg"
                   alt="Insta360 GO 3S Standalone Camera | 128GB" />
@@ -655,7 +655,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/fujifilm/OngKinhMayAnh.jpeg"
                   alt="Ống kính máy ảnh Fujifilm XF35mmF1.4" />
@@ -679,7 +679,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/camerapage/cameraproduct/fujifilm/FujiFilmX-T30.jpeg"
                   alt="Máy ảnh Fujifilm X-T30 II" />
