--- a/pages/earphone.html
+++ b/pages/earphone.html
@@ -31,10 +31,10 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
-          <a href="../pages/account.html">
+          <a href="">
             <img src="../assets/images/NguyenDucVu_241230896/header_image/login-icon.png" alt="login icon"
               id="login-icon-img" />
           </a>
@@ -170,7 +170,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/airpod/pro3.jpeg"
                   alt="AirPods Pro 3" />
@@ -192,7 +192,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="tragop" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/airpod/pods4.jpeg"
                   alt="AirPods 4" />
@@ -214,7 +214,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="tragop" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/airpod/maxusbc.jpeg"
                   alt="AirPods Max cổng USB C 2024" />
@@ -233,7 +233,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/marshall/stanmore3.png"
                   alt="Loa Marshall Stanmore III" />
@@ -255,7 +255,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/marshall/0033180_tai-nghe-marshall-motif-ii-anc-black_240.jpeg"
@@ -278,7 +278,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/marshall/0041670_tai-nghe-marshall-minor-iv_240.png"
@@ -301,7 +301,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="tragop" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/marshall/0041671_loa-marshall-acton-iii_240.png"
@@ -323,7 +323,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/beats/0038414_tai-nghe-apple-beats-solo-buds_240.jpeg"
@@ -346,7 +346,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/beats/0038422_tai-nghe-apple-beats-studio-buds-trpt-mqlk3zpa_240.jpeg"
@@ -369,7 +369,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/beats/0038429_tai-nghe-apple-beats-studio-pro-wireless_240.jpeg"
@@ -394,7 +394,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/beats/0038436_tai-nghe-khong-day-beats-powerbeats-pro-den-my582zpa_240.jpeg"
@@ -415,7 +415,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/harman kardon/0002142_loa-harman-kardon-go-play-mini_240.jpeg"
@@ -435,7 +435,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/harman kardon/0032378_loa-harman-kardon-onyx-studio-8_240.png"
@@ -456,7 +456,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/harman kardon/0033345_loa-harman-kardon-go-play-3_240.png"
@@ -476,7 +476,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/airpod/earpods-usb-c.jpeg"
                   alt="EarPods with USB-C" />
@@ -494,7 +494,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/jbl/0037188_loa-jbl-charge-6_240.png"
@@ -515,7 +515,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/jbl/0037300_loa-jbl-flip-7_240.png"
@@ -536,7 +536,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/jbl/0033388_loa-jbl-clip-5_240.png"
@@ -559,7 +559,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/jbl/0050517_loa-jbl-boombox-4_240.png"
@@ -580,7 +580,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="newtag" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/belkin/0028045_tai-nghe-belkin-bluetooth-soundform-play_240.jpeg"
@@ -603,7 +603,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/belkin/0042023_tai-nghe-belkin-soundform-rhythm-tre-wireless-earbuds_240.jpeg"
@@ -624,7 +624,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/sony/0028633_tai-nghe-bluetooth-chup-tai-sony-wh1000xm5_240.jpeg"
@@ -647,7 +647,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/sony/0028647_tai-nghe-chup-tai-sony-whult900n_240.jpeg"
@@ -668,7 +668,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/sony/0038084_tai-nghe-bluetooth-true-wireless-sony-wh-1000xm6_240.jpeg"
@@ -690,7 +690,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/jabra/0024203_tai-nghe-jabra-elite-4-active_240.png"
@@ -711,7 +711,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/jabra/0015565_tai-nghe-jabra-elite-4_240.webp"
@@ -731,7 +731,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/sony/0041787_loa-di-dong-khong-day-ult-field-3-srs-ult30_240.jpeg"
@@ -754,7 +754,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img
                   src="../assets/images/LeQuyTung_241230886/earphonepage/earphoneproducts/sony/0041835_loa-di-dong-khong-day-sony-ult-field-5-srs-ult50_240.jpeg"
