--- a/pages/giadung.html
+++ b/pages/giadung.html
@@ -31,7 +31,7 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
           <a href="">
@@ -125,7 +125,7 @@
               <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
             </div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayLocKhongKhi/XiaomiElite.jpeg" alt="" />
               </div>
@@ -143,7 +143,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayHutBui/roborockSaros10.png" alt="" />
               </div>
@@ -161,7 +161,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayHutBui/roborockZ70.png"
                   alt="Robot hút bụi Roborock Saros Z70" />
@@ -180,7 +180,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/NoiDien/MorphyRichardMBC-UMD3N.png"
                   alt="Nồi lẩu nướng đa năng Morphy Richards MBC-UMD3N" />
@@ -201,7 +201,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/NoiDien/MorphyRichardMBC-UPM3W.png"
                   alt="Nồi điện đa năng Morphy Richards MBC-UPM3W" />
@@ -222,7 +222,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/NoiDien/MorphyRichardMBC-MOC-RP3W.png"
                   alt="Nồi áp suất điện đa năng Morphy Richards MOC-RP3W" />
@@ -242,7 +242,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayHutChanKhong/MorphyRichardMBC-VS3E.png"
                   alt="Máy hút chân không tiện lợi Morphy Richards MBC-VS3E" />
@@ -262,7 +262,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayHutBui/robotxiaomie10c.png"
                   alt="Xiaomi Robot Vacuum E10C" />
@@ -282,7 +282,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayHutBui/robotxiaomiS20.png"
                   alt="Xiaomi Robot Vacuum S20" />
@@ -301,7 +301,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MaySay/DreamePro.png"
                   alt="Bộ máy sấy Dreame Hair Dryer Glory Pro" />
@@ -323,7 +323,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MaySay/DreameAHD6A-RS.png"
                   alt="Máy sấy tóc Dreame Hair Dryer Glory AHD6A-RS" />
@@ -345,7 +345,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MaySay/DreameAHD12A.png"
                   alt="Máy sấy tóc Dreame Hair Dryer Gleam AHD12A" />
@@ -367,7 +367,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MaySay/DreameAHD54.png"
                   alt="Bộ máy sấy Dreame Hair Pocket Uni AHD54" />
@@ -389,7 +389,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayHutBui/robotxiaomieS20Plus.png"
                   alt="Xiaomi Robot Vacuum S20+" />
@@ -408,7 +408,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayEp/BruanJ500BK.png"
                   alt="Máy ép trái cây Braun J500BK" />
@@ -426,7 +426,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/AmDunNuoc/BruanWK1000BK.jpeg"
                   alt="Ấm siêu tốc Braun WK1100BK" />
@@ -445,7 +445,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/AmDunNuoc/BruanWK1100WH.jpeg"
                   alt="Ấm siêu tốc Braun WK1100 WH" />
@@ -464,7 +464,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/AmDunNuoc/BruanWK1500BK.jpeg"
                   alt="Ấm siêu tốc Braun WK1500BK" />
@@ -482,7 +482,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayLocKhongKhi/dreamePM20CVF14A.png"
                   alt="Máy lọc không khí Dreame PM20 CVF14A" />
@@ -503,7 +503,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayXay/BruanMQ7045X.jpeg"
                   alt="Máy xay cầm tay Braun MQ7045X" />
@@ -522,7 +522,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayXay/Bruan5235CN.jpeg"
                   alt="Máy xay cầm tay Braun MQ5235CN" />
@@ -541,7 +541,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayXay/BruanMQ5200.png"
                   alt="Máy xay cầm tay Braun MQ5200" />
@@ -559,7 +559,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/AmDunNuoc/MorphyRichardMBC-KC2E.png"
                   alt="Ấm đun nước cao cấp Morphy Richards MBC-KC2E" />
@@ -580,7 +580,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/AmDunNuoc/MorphyRichardMBC-KAF3N.png"
                   alt="Ấm đun nước điện Morphy Richards MBC-KAF3N" />
@@ -601,7 +601,7 @@
           <div class="product-inner">
             <div class="product-tag"></div>
 
-            <a href="">
+            <a href="./product.html?id=">
               <div class="product-image">
                 <img src="../assets/images/LeQuyTung_241230886/giadungpage/MayXay/BruanJB3150BK.jpeg"
                   alt="Máy xay sinh tố Braun JB3150BK" />
