--- a/pages/iPad.html
+++ b/pages/iPad.html
@@ -31,7 +31,7 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
           <a href="">
@@ -133,8 +133,7 @@
               <div class="product-tag">
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
-
-              <a href="">
+              <a href="./product.html?id=ipad-pro-m5-11inch">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
@@ -159,7 +158,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=ipad-pro-m5-cellular-11inch">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
@@ -184,7 +183,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=ipad-pro-m5-13inch">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
@@ -209,7 +208,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=ipad-pro-m5-cellular-13inch">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro(M5)/0051114_ipad-pro-m5-11-inch-wi-fi-cellular-256gb_240.jpeg"
@@ -234,7 +233,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_(A16)/0035754_ipad-a16-11-inch-wi-fi_240.png"
@@ -257,7 +256,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_(A16)/0035754_ipad-a16-11-inch-wi-fi_240.png"
@@ -280,7 +279,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035054_ipad-air-m3-11-inch-wi-fi_240.png"
@@ -303,7 +302,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035136_ipad-air-m3-13-inch-wi-fi_240.png"
@@ -326,7 +325,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035342_ipad-air-m3-11-inch-wi-fi-cellular_240.png"
@@ -349,7 +348,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M3)/0035752_ipad-air-m3-13-inch-wi-fi-cellular_240.png"
@@ -374,7 +373,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M2)/0025628_ipad-air-6-m2-11-inch-wi-fi_240.jpeg"
@@ -397,7 +396,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (M2)/0025629_ipad-air-6-m2-11-inch-wi-fi-cellular_240.jpeg"
@@ -422,7 +421,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (m2)/0025631_ipad-air-m2-13-inch-wi-fi-cellular_240.jpeg"
@@ -445,7 +444,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_Air (m2)/0025631_ipad-air-m2-13-inch-wi-fi-cellular_240.jpeg"
@@ -470,7 +469,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_mini/0030994_ipad-mini-a17-pro-wi-fi-128gb_240.jpeg"
@@ -493,7 +492,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_mini/0000593_ipad-mini-6_240.png"
@@ -514,7 +513,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_mini/0031838_ipad-mini-a17-pro-wi-fi-cellular-128gb_240.jpeg"
@@ -537,7 +536,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025624_ipad-pro-m4-11-inch-wi-fi_240.jpeg"
@@ -560,7 +559,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025624_ipad-pro-m4-11-inch-wi-fi_240.jpeg"
@@ -585,7 +584,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025626_ipad-pro-m4-13-inch-wi-fi-cellular_240.jpeg"
@@ -610,7 +609,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_pro_(M4)/0025626_ipad-pro-m4-13-inch-wi-fi-cellular_240.jpeg"
@@ -633,7 +632,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/iPad/iPad_gen_10/0009725_ipad-gen-10-th-109-inch-wifi-64gb_240.png"
