--- a/pages/iphone.html
+++ b/pages/iphone.html
@@ -32,7 +32,7 @@
                     </form>
                 </div>
                 <div class="cart-icon">
-                    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
                 <div class="login-icon">
                     <a href="">
@@ -73,7 +73,7 @@
                     <li class="category-menu-items"><a href="./watch.html">Watch</a></li>
                     <li class="category-menu-items"><a href="./phu_kien.html">Phụ kiện</a></li>
                     <li class="category-menu-items"><a href="./earphone.html"">Âm thanh</a></li>
-                    <li class="category-menu-items"><a href="./camera.html">Camera</a></li>
+                    <li class=" category-menu-items"><a href="./camera.html">Camera</a></li>
                     <li class="category-menu-items"><a href="./giadung.html">Gia dụng</a></li>
                     <li class="category-menu-items"><a href="./tintuc.html">Tin tức</a></li>
                 </ul>
@@ -125,8 +125,171 @@
             <div class="page-content">
 
                 <div class="products-container">
-                    
+
                 </div>
+                <div class="section-2">
+                    <div class="section-2-inner">
+                        <div class="content">
+                            <br />
+                            <h2 class="title">Giới thiệu về Apple iPhone</h2>
+                            <p>
+                                <b class="links">Apple iPhone</b> là dòng điện thoại thông minh của
+                                thương hiệu Apple Inc., phổ biến trên toàn thế giới và được hàng trăm
+                                triệu người dùng yêu thích. Tính đến hiện tại, Apple đã ra mắt nhiều
+                                thế hệ iPhone, từ iPhone 2G đầu tiên đến dòng
+                                <b>iPhone 17 Series</b> mới nhất. Đây đều là những sản phẩm đình đám
+                                trong ngành công nghệ và mang đến cho người dùng trải nghiệm cao cấp,
+                                mượt mà và an toàn.
+                            </p>
+
+                            <h2 class="title">Giới thiệu về iPhone</h2>
+
+                            <p>
+                                <b class="links">iPhone</b> là dòng điện thoại cao cấp được Apple Inc.
+                                sản xuất và phát triển, nổi bật với thiết kế sang trọng, hiệu năng mạnh
+                                mẽ và khả năng tối ưu tuyệt vời giữa phần cứng và phần mềm, nhờ hệ điều
+                                hành <b>iOS</b> – do chính Apple phát triển.
+                            </p>
+
+                            <p>
+                                iPhone hiện có nhiều dòng sản phẩm như <b>iPhone tiêu chuẩn</b>,
+                                <b>iPhone Plus</b>, <b>iPhone Pro</b> và <b>iPhone Pro Max</b>. Các mẫu
+                                iPhone mới đều sử dụng chip Apple A-series được phát triển riêng, mang
+                                đến hiệu suất vượt trội và khả năng tiết kiệm năng lượng tuyệt vời. Đến
+                                nay, Apple đã ra mắt đến chip <b>A18 Pro</b>.
+                            </p>
+
+                            <p>
+                                <b><em>Tại sao nên mua iPhone?</em></b>
+                            </p>
+                            <ul>
+                                <li>
+                                    <b>Dễ sử dụng.</b> iPhone được thiết kế để mọi người đều có thể làm
+                                    quen nhanh chóng, với giao diện thân thiện và thao tác mượt mà.
+                                </li>
+
+                                <li>
+                                    <b>Thiết lập dễ dàng:</b> Nếu bạn chuyển đổi từ điện thoại Android
+                                    hoặc iPhone cũ hơn, bạn có thể nhanh chóng chuyển dữ liệu, tài khoản
+                                    và cài đặt chỉ trong vài bước đơn giản nhờ iCloud hoặc công cụ
+                                    <b>Quick Start</b>.
+                                </li>
+
+                                <li>
+                                    <b>Trải nghiệm mượt mà:</b> iPhone hoạt động ổn định trong nhiều năm
+                                    nhờ sự tối ưu giữa phần cứng và phần mềm, đồng thời được cập nhật hệ
+                                    điều hành iOS thường xuyên.
+                                </li>
+
+                                <li>
+                                    <b>Hiệu năng mạnh mẽ:</b> Với chip Apple A-series, iPhone xử lý mượt
+                                    mà mọi tác vụ – từ làm việc, học tập đến chơi game, quay phim và chỉnh
+                                    sửa ảnh, video chuyên nghiệp.
+                                </li>
+
+                                <li>
+                                    <b>Bảo mật hàng đầu:</b> Hệ thống Face ID, Touch ID và mã hóa dữ liệu
+                                    tiên tiến giúp bảo vệ thông tin cá nhân của người dùng tốt nhất trên
+                                    thị trường smartphone.
+                                </li>
+
+                                <li>
+                                    <b>Hệ sinh thái Apple:</b> iPhone hoạt động hoàn hảo cùng các thiết bị
+                                    khác như MacBook, iPad, Apple Watch, AirPods – mang lại trải nghiệm
+                                    liền mạch và tiện lợi.
+                                </li>
+                            </ul>
+
+                            <h2 class="title">Giới thiệu về iPhone Pro</h2>
+
+                            <p>
+                                <span class="links">iPhone Pro</span> là dòng sản phẩm cao cấp nhất trong
+                                gia đình iPhone, được thiết kế cho người dùng chuyên nghiệp và những ai
+                                muốn trải nghiệm công nghệ tiên tiến nhất.
+                            </p>
+
+                            <p>
+                                iPhone Pro được đánh giá là “<b>chuẩn mực vàng</b>” của smartphone,
+                                được các tạp chí công nghệ hàng đầu ca ngợi nhờ thiết kế sang trọng, hiệu
+                                năng vượt trội và khả năng quay phim, chụp ảnh đỉnh cao.
+                            </p>
+
+                            <p>
+                                iPhone Pro liên tục được nâng cấp qua từng thế hệ. Nếu như iPhone 11 Pro
+                                gây ấn tượng với 3 camera đầu tiên thì đến iPhone 16 Pro, Apple đã mang
+                                đến thiết kế khung titanium siêu nhẹ, màn hình ProMotion 120Hz và chip
+                                A18 Pro cực mạnh, đồng thời tối ưu năng lượng vượt trội.
+                            </p>
+
+                            <p>
+                                <b><em>Tại sao nên mua iPhone Pro?</em></b>
+                            </p>
+
+                            <ul>
+                                <li>
+                                    <b>Thiết kế sang trọng và bền bỉ:</b> Với khung viền titan, mặt kính
+                                    Ceramic Shield và nhiều tùy chọn màu cao cấp.
+                                </li>
+                                <li>
+                                    <b>Màn hình ProMotion 120Hz:</b> Cho độ mượt mà vượt trội khi vuốt,
+                                    cuộn hay chơi game.
+                                </li>
+                                <li>
+                                    <b>Camera chuyên nghiệp:</b> Hệ thống 3 camera với khả năng zoom quang
+                                    học, chụp đêm, quay video 4K HDR, hỗ trợ định dạng ProRAW và ProRes.
+                                </li>
+                                <li>
+                                    <b>Hiệu năng cực mạnh:</b> Chip Apple A18 Pro mang đến tốc độ xử lý và
+                                    khả năng AI vượt trội so với đối thủ.
+                                </li>
+                                <li>
+                                    <b>Âm thanh sống động:</b> Loa stereo, micro chống ồn và hỗ trợ quay
+                                    video âm thanh không gian.
+                                </li>
+                            </ul>
+
+                            <h2 class="title">TamKa cung cấp những dòng iPhone nào?</h2>
+
+                            <p>
+                                <span class="links">TamKa</span> là một trong những thương hiệu bán lẻ
+                                được <b>Apple uỷ quyền tại Việt Nam</b>, đáp ứng các tiêu chuẩn khắt khe
+                                từ Apple về dịch vụ, trải nghiệm khách hàng và cơ sở hạ tầng.
+                            </p>
+
+                            <p>
+                                Những chiếc iPhone chính hãng do Apple Việt Nam phân phối đều mang mã
+                                <b>VN/A</b> hoặc <b>ZA/A</b>, được bảo hành 12 tháng theo tiêu chuẩn
+                                Apple tại các trung tâm ủy quyền. Đây là cam kết chính hãng và đảm bảo
+                                chất lượng cao nhất cho người dùng Việt Nam.
+                            </p>
+
+                            <p>
+                                Ngoài ra, TamKa cũng cung cấp đầy đủ phụ kiện Apple chính hãng như ốp
+                                lưng, sạc nhanh, cáp Lightning và MagSafe để người dùng có trải nghiệm
+                                trọn vẹn nhất.
+                            </p>
+
+                            <h2 class="title">Mua iPhone giá tốt nhất tại TamKa</h2>
+
+                            <p>
+                                <span class="links">TamKa</span> là đại lý uỷ quyền Apple tại Việt Nam
+                                với hệ thống cửa hàng trên toàn quốc. Đến nay, TamKa đã trở thành điểm
+                                đến tin cậy cho iFans, đặc biệt là thế hệ Gen Z yêu thích phong cách
+                                trẻ trung, công nghệ hiện đại.
+                            </p>
+
+                            <p>
+                                Tại <span class="links">TamKa</span> luôn có
+                                <b>mức giá tốt</b> cho người dùng cùng với nhiều chương trình khuyến mãi
+                                hấp dẫn diễn ra thường xuyên. Hãy đến với TamKa để trải nghiệm ngay
+                                những mẫu iPhone mới nhất cùng đội ngũ chuyên viên tư vấn được đào tạo
+                                bài bản từ Apple – sẵn sàng hỗ trợ bạn về sản phẩm, kỹ thuật và các xu
+                                hướng công nghệ mới nhất.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <!-- Ket thuc code -->
         </div>
