--- a/pages/phu_kien.html
+++ b/pages/phu_kien.html
@@ -31,7 +31,7 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
           <a href="">
@@ -153,7 +153,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/AirTags/0003638_op-airtag-wiwu-silicone-loop_240.webp"
@@ -176,7 +176,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/AirTags/0003649_apple-airtag_240.png"
@@ -199,7 +199,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/AirTags/0003660_op-airtag-2in1-esr-silicone_240.jpeg"
@@ -222,7 +222,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/AirTags/0003666_op-airtag-wiwu-silicone-4in1_240.jpeg"
@@ -245,7 +245,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/AirTags/0003690_airtag-loop_240.webp"
@@ -268,7 +268,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/AirTags/0003701_apple-airtag-leather-key-ring_240.webp"
@@ -291,7 +291,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple TV/0001893_apple-tv-4k-2021_240.jpeg"
@@ -313,7 +313,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple TV/0001893_apple-tv-4k-2021_240.jpeg"
@@ -337,7 +337,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple TV/0001893_apple-tv-4k-2021_240.jpeg"
@@ -359,7 +359,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple TV/0001893_apple-tv-4k-2021_240.jpeg"
@@ -381,7 +381,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple TV/0012119_apple-tv-remote-2022_240.jpeg"
@@ -406,7 +406,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Gaming Gear/0033406_ps5-slim-may-choi-game-sony-playstation-5-slim_240.jpeg"
@@ -431,7 +431,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Gaming Gear/0033406_ps5-slim-may-choi-game-sony-playstation-5-slim_240.jpeg"
@@ -457,7 +457,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Gaming Gear/0028229_chan-de-doc-playstation-5-slim_550.png"
@@ -479,7 +479,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Gaming Gear/0028232_den_550.jpeg"
@@ -501,7 +501,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Gaming Gear/0028279_tay-cam-khong-day-sony-dualsense-cfi-zct1g_cfi-zct1g_550.jpeg"
@@ -528,7 +528,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/moi_mo_ban_2.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Pin dự phòng/0001934_sac-du-phong-khong-day-magsafe-battettery-pack_550.jpeg"
@@ -553,7 +553,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Pin dự phòng/0031137_pin-sac-du-phong-innostyle-powergo-smart-ai-black-ip10sa-blk_550.jpeg"
@@ -579,7 +579,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Pin dự phòng/0034864_titanium_550.jpeg"
@@ -605,7 +605,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Pin dự phòng/0001831_pin-sac-du-phong-yoobao-10000mah_550.jpeg"
@@ -630,7 +630,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Chuot-Ban phim/0034293_ban-phim-smart-keyboard-folio-cho-ipad-pro-11-inch-mxnk2-dung-cho-ipad-pro-the-he-thu-1234_240.jpeg"
@@ -656,7 +656,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Chuot-Ban phim/0034295_phu-kien-apple-magic-keyboard-for-ipad-pro-13inch-m4-us-english_240.jpeg"
@@ -681,7 +681,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Chuot-Ban phim/0033176_white_550.jpeg"
@@ -704,7 +704,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Chuot-Ban phim/0033986_silver_550.jpeg"
@@ -726,7 +726,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Chuot-Ban phim/0034539_phu-kien-apple-magic-keyboard-its-mxcl3zaa_550.jpeg"
@@ -748,7 +748,7 @@
             <div class="product-inner">
               <div class="product-tag"></div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Chuot-Ban phim/0038141_chuot-khong-day-hyper-hs2100gl_550.jpeg"
@@ -770,7 +770,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Lifestyle/0034548_nhan-thong-minh-9fit_240.png"
@@ -793,7 +793,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Lifestyle/0034552_vi-9fit-e-biz-card-wallet-stand_240.png"
@@ -817,7 +817,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple Pencil/0010774_pencil-1-2022_550.png"
@@ -840,7 +840,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/nhan-tin.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple Pencil/0034824_but-magnetic-digital-pencil-pro-6c004-esr-cho-ipad-mau-trang-esr_550.jpeg"
@@ -866,7 +866,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/san-hang-n.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Phu_kien/Apple Pencil/0037570_but-digital-pencil-geo-cho-ipad-esr-su-dung-duoc-cho-ipad-m3m4_550.png"
