--- a/pages/product.html
+++ b/pages/product.html
@@ -28,7 +28,7 @@
                             placeholder="Bạn muốn tìm gì..."></form>
                 </div>
                 <div class="cart-icon">
-                    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
                 <div class="login-icon">
                     <a href="">
@@ -115,7 +115,9 @@
                             </div>
                         </div>
                         <button class="buy-button">MUA NGAY</button>
+                        <button class="to-cart-button">THÊM VÀO GIỎ HÀNG</button>
                         <button class="credit-button">MUA TRẢ GÓP</button>
+                        
                         <ul class="policy-list">
                             <li>
                                 <span class="icon-check"></span>
