--- a/pages/tintuc.html
+++ b/pages/tintuc.html
@@ -33,7 +33,7 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
           <a href="">
