--- a/pages/watch.html
+++ b/pages/watch.html
@@ -31,10 +31,10 @@
           </form>
         </div>
         <div class="cart-icon">
-          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="login-icon">
-          <a href="../pages/account.html">
+          <a href="">
             <img src="../assets/images/NguyenDucVu_241230896/header_image/login-icon.png" alt="login icon"
               id="login-icon-img" />
           </a>
@@ -139,7 +139,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_nhom.jpeg"
@@ -164,7 +164,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_nhom.jpeg"
@@ -190,7 +190,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_den.jpeg"
@@ -216,7 +216,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_silver.jpeg"
@@ -242,7 +242,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_silver.jpeg"
@@ -267,7 +267,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_nhom.jpeg"
@@ -292,7 +292,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_titan.jpeg"
@@ -318,7 +318,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_titan_gold.jpeg"
@@ -344,7 +344,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_titan_tron.jpeg"
@@ -370,7 +370,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 11/series_11_titan.jpeg"
@@ -396,7 +396,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_nhom.png"
@@ -422,7 +422,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="">
+              <a href="./product.html?id=">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_nhom_tim_nho.jpeg"
@@ -448,7 +448,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_nhom_den.png"
@@ -474,7 +474,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_nhom_nhat.png"
@@ -500,7 +500,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_nhom_den_nho.jpeg"
@@ -525,7 +525,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_nhom_tim_nho.jpeg"
@@ -550,7 +550,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch series 10/series_10_xanh.jpeg"
@@ -575,7 +575,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch SE/SE_3_nhom.jpeg"
                     alt="" />
@@ -598,7 +598,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch SE/SE_nham.jpeg"
                     alt="" />
@@ -622,7 +622,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch SE/SE_kem_nho.jpeg"
                     alt="" />
@@ -646,7 +646,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch SE/SE_xanh.jpeg"
                     alt="" />
@@ -670,7 +670,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch SE/SE.jpeg" alt="" />
                 </div>
@@ -693,7 +693,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch SE/SE_nham.jpeg"
                     alt="" />
@@ -717,7 +717,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch Ultra/ulrta_2_milanese.png"
@@ -741,7 +741,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/tra-gop-0.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch Ultra/ultra_2_alpine.png"
@@ -766,7 +766,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch Ultra/ulrta_2_milanese.png"
@@ -790,7 +790,7 @@
                 <img src="../assets/images/NguyenKimTuyen_241230888/Product_tags/new.png" alt="image" />
               </div>
 
-              <a href="" class="product-link">
+              <a href="./product.html?id=" class="product-link">
                 <div class="product-image">
                   <img
                     src="../assets/images/NguyenKimTuyen_241230888/Product_images/Watch/Watch Ultra/watch_ultra_3.jpeg"
