--- a/pages/login.html
+++ b/pages/login.html
@@ -28,7 +28,7 @@
                             placeholder="Bạn muốn tìm gì..."></form>
                 </div>
                 <div class="cart-icon">
-                    <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
                 <div class="login-icon">
                     <a href="">
